# shensi-learning-pilot

./: .env.example  .gitattributes  .gitignore  README.md  pyproject.toml  慎思_AI学习诊断与复盘系统_PRD.md
app/: __init__.py  api.py  bootstrap.py  config.py  main.py
app/feishu/: __init__.py  cards.py  client.py  router_helpers.py  webhook.py
app/graph/: __init__.py  daily_report_graph.py  mistake_graph.py  states.py  weekly_report_graph.py
app/models/: schemas.py
app/prompts/: daily_report.md  mistake_analysis.md  weekly_report.md
app/scheduler/: jobs.py
app/services/: __init__.py  ai_service.py  hermes_service.py  knowledge_service.py  math_verification_service.py  obsidian_service.py  report_service.py  review_service.py  sqlite_service.py  workflow_service.py
app/templates/: concept_note.md  daily_report.md  mistake_note.md  weekly_report.md
deploy/hermes-skills/: README.md  SKILL.md
deploy/hermes-skills/shensi-antigravity/: SKILL.md
deploy/systemd/: shensi-api.service  shensi-router.service
docs/: HANDOFF_2026-06-04.md  HANDOFF_2026-06-05.md  Hermes_integration.md  PRD_gaps.md
examples/: sample_payload.json
knowledge/curriculum/: README.md
scripts/: backfill_obsidian_index.py  diagnose_latency.py  init_db.py  prune_raw_images.py  reset_storage.py  run_feishu_ws.py  run_local_demo.py  seed_error_types.py  sync_curriculum.py
scripts/cloud/: shensi-antigravity-submit  shensi-antigravity-vision  shensi-feishu-analysis-latest  shensi-index-image  shensi-pending-modify
tests/: test_bootstrap.py  test_mvp_workflow.py  test_router.py
(+140 files in other folders)
